--- a/hwapp/project.json
+++ b/hwapp/project.json
@@ -1,14 +1,18 @@
 {
-    "version": "1.0.0-*",
-    "compilationOptions": {
-        "emitEntryPoint": true
-    },
+  "version": "1.0.0-*",
+  "compilationOptions": {
+    "emitEntryPoint": true
+  },
 
-    "dependencies": {
-        "NETStandard.Library": "1.0.0-rc3-23829"
-    },
+  "dependencies": {
+    "NETStandard.Library": "1.0.0-rc2-23811"
+  },
 
-    "frameworks": {
-        "dnxcore50": { }
-    }
+  "commands": {
+    "hwapp": "hwapp"
+  },
+
+  "frameworks": {
+    "dnxcore50": { }
+  }
 }
