Added few basic program on Variables.

--- a/SampleConsoleApps/Day2/Variables.Basics.App/project.json
+++ b/SampleConsoleApps/Day2/Variables.Basics.App/project.json
@@ -5,6 +5,7 @@
   },
 
   "dependencies": {
+    "Variables.Basics": "1.0.0-*",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.0-rc2-3002702"
