--- a/SampleConsoleApps/Day2/Variables.Basics.App/project.json
+++ b/SampleConsoleApps/Day2/Variables.Basics.App/project.json
@@ -14,7 +14,7 @@
 
   "frameworks": {
     "netcoreapp1.0": {
-      "imports": "dnxcore50"
+      "imports": [ "dnxcore50", "portable-net45+win8" ]
     }
   }
 }
