--- a/SampleConsoleApps/Day2/Variables.Basics/project.json
+++ b/SampleConsoleApps/Day2/Variables.Basics/project.json
@@ -2,12 +2,28 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027"
+    "Microsoft.NETCore.App": {
+      "type": "platform",
+      "version": "1.0.0-rc2-3002702"
+    },
+    "NETStandard.Library": "1.5.0-rc2-24027",
+    "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.Tools": {
+      "type": "build",
+      "version": "1.0.0-preview1-final"
+    }
   },
 
   "frameworks": {
-    "netstandard1.5": {
-      "imports": "dnxcore50"
+    "netcoreapp1.0": {
+      "imports": [ "dnxcore50", "portable-net45+win8" ]
+    }
+  },
+  "tools": {
+    "Microsoft.EntityFrameworkCore.Tools": {
+      "version": "1.0.0-preview1-final",
+      "imports": [ "dnxcore50", "portable-net45+win8" ]
     }
   }
 }
