--- a/hwapp/project.json
+++ b/hwapp/project.json
@@ -1,18 +1,17 @@
 {
   "version": "1.0.0-*",
-  "compilationOptions": {
+  "buildOptions": {
     "emitEntryPoint": true
   },
-
   "dependencies": {
-    "NETStandard.Library": "1.0.0-rc2-23811"
+    "Microsoft.NETCore.App": {
+      "type": "platform",
+      "version": "1.0.0-rc2-3002702"
+    }
   },
-
-  "commands": {
-    "hwapp": "hwapp"
-  },
-
   "frameworks": {
-    "dnxcore50": { }
+    "netcoreapp1.0": {
+      "imports": "dnxcore50"
+    }
   }
 }
