--- a/hwappwincli/project.json
+++ b/hwappwincli/project.json
@@ -1,14 +1,18 @@
 {
-    "version": "1.0.0-*",
-    "compilationOptions": {
-        "emitEntryPoint": true
-    },
-
-  "dependencies": {
-    "NETStandard.Library": "1.0.0-rc2-23804"
+  "version": "1.0.0-*",
+  "compilationOptions": {
+    "emitEntryPoint": true
   },
 
-    "frameworks": {
-        "dnxcore50": { }
+  "dependencies": {
+    "Microsoft.NETCore.App": {
+      "type": "platform",
+      "version": "1.0.0-rc2-3002702"
     }
+  },
+  "frameworks": {
+    "netcoreapp1.0": {
+      "imports": "dnxcore50"
+    }
+  }
 }
