--- a/hwcliconsole/.vscode/launch.json
+++ b/hwcliconsole/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/bin/Debug/dnxcore50/ubuntu.14.04-x64/hwcliconsole",
+            "program": "${workspaceRoot}/bin/Debug/netcoreapp1.0/hwcliconsole.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false
