--- a/SampleConsoleApps/Day1/FirstLibrary/project.json
+++ b/SampleConsoleApps/Day1/FirstLibrary/project.json
@@ -2,12 +2,16 @@
   "version": "1.0.0-*",
 
   "dependencies": {
+    "Microsoft.NETCore.App": {
+      "type": "platform",
+      "version": "1.0.0-rc2-3002702"
+    },
     "NETStandard.Library": "1.5.0-rc2-24027"
   },
 
   "frameworks": {
-    "netstandard1.5": {
-      "imports": "dnxcore50"
+    "netcoreapp1.0": {
+      "imports": [ "dnxcore50", "portable-net45+win8" ]
     }
   }
 }
