--- a/SampleConsoleApps/Day1/helloworld/project.json
+++ b/SampleConsoleApps/Day1/helloworld/project.json
@@ -14,7 +14,7 @@
 
   "frameworks": {
     "netcoreapp1.0": {
-      "imports": "dnxcore50"
+      "imports": [ "dnxcore50", "portable-net45+win8" ]
     }
   }
 }
