--- a/30Sep2016/30Sep2016.App/project.json
+++ b/30Sep2016/30Sep2016.App/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-*",
+  "version": "1.0.1",
   "buildOptions": {
     "emitEntryPoint": true
   },
@@ -8,7 +8,9 @@
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
-    }
+    },
+    "NETStandard.Library": "1.6.0",
+    "30Sep2016.Lib": "1.0.1"
   },
 
   "frameworks": {
