--- a/04Oct2016/04Oct2016.App/project.json
+++ b/04Oct2016/04Oct2016.App/project.json
@@ -9,7 +9,8 @@
       "type": "platform",
       "version": "1.0.1"
     },
-    "04Oct2016.Lib":  "1.0.1"
+    "NETStandard.Library": "1.6.0",
+    "04Oct2016.Lib": "1.0.1"
   },
 
   "frameworks": {
