--- a/04Oct2016/04Oct2016.Lib/project.json
+++ b/04Oct2016/04Oct2016.Lib/project.json
@@ -2,7 +2,8 @@
   "version": "1.0.1",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.0",
+     "Microsoft.CSharp": "4.0.1"
   },
 
   "frameworks": {
