--- a/06Oct2016/06Oct2016.App/project.json
+++ b/06Oct2016/06Oct2016.App/project.json
@@ -8,7 +8,9 @@
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
-    }
+    },
+    "NETStandard.Library": "1.6.0",
+    "06Oct2016.Lib": "1.0.1"
   },
 
   "frameworks": {
