--- a/LearnCSharp.NetCore/Programs.ConsoleApp/Programs.ConsoleApp.csproj
+++ b/LearnCSharp.NetCore/Programs.ConsoleApp/Programs.ConsoleApp.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Basic.Programs\Basic.Programs.csproj" />
+  </ItemGroup>
+
 </Project>
